--- a/src/pages/homepage/scss/_clients.scss
+++ b/src/pages/homepage/scss/_clients.scss
@@ -66,9 +66,8 @@
     width: 365px !important;
   }
   .clients-grid {
-    grid-template-columns: repeat(auto-fit, minmax(187px, 0fr));
-    grid-auto-rows: 90px;
-    grid-template-rows: unset;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
     &__item {
       img {
         width: 50%;
